--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Monamine",
+  "name": "Monacalypse",
   "version": "0.1",
-  "description": "Redmineのテキストエリアをmonaco-editorに変更します。",
+  "description": "Convert textarea to monaco-editor",
   "permissions": [
     "tabs",
     "<all_urls>",
