--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "monaco-editor": "^0.14.3"
+    "monaco-editor": "^0.14.3",
+    "monaco-themes": "^0.2.5"
   }
 }
